--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,50 @@
+body {
+  background: rgb(21, 255, 0)255, 235, 192);
+}
 h1 {
-  background-color: rgb(4, 255, 213);
+  text-align: center;
+}
+.caixa1 {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background: rgb(38, 255, 0);
+  left: 0;
+  bottom:0;
+}
+.caixa2 {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background: rgb(60, 255, 0);
+  left: 205px;
+  bottom:0;
+}
+.menuPrincipal {
+   position: absolute;
+   width: 100%;
+   height: 80px;
+   background:rgb(0, 255, 0);
+   font-family: 'Courier New', Courier, monospace;
+   top: 0%;
+   left: 0%;
+}
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow: 0;
+}
+li {
+  float: left;
+}
+li a {
+  display: block;
+  color: rgb(0, 0, 0);
+  padding: 14px 16px;
+  text-decoration: none:
+}
+li a:hover {
+  background-color: blueviolet;
+  color: black;
 }
