--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 body {
-  background: rgb(21, 255, 0)255, 235, 192);
+  background: rgb(179, 210, 235)255, 235, 192);
 }
 h1 {
   text-align: center;
@@ -8,7 +8,7 @@ h1 {
   position: absolute;
   width: 200px;
   height: 200px;
-  background: rgb(38, 255, 0);
+  background: green;
   left: 0;
   bottom:0;
 }
@@ -16,21 +16,21 @@ h1 {
   position: absolute;
   width: 200px;
   height: 200px;
-  background: rgb(60, 255, 0);
+  background: yellow;
   left: 205px;
   bottom:0;
 }
 .menuPrincipal {
    position: absolute;
    width: 100%;
-   height: 80px;
-   background:rgb(0, 255, 0);
+   height: 45px;
+   background:rgb(161, 246, 252);
    font-family: 'Courier New', Courier, monospace;
-   top: 0%;
-   left: 0%;
+   top: 0;
+   left: 0;
 }
 nav ul {
-  list-style: none;
+  list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: 0;
@@ -40,11 +40,45 @@ li {
 }
 li a {
   display: block;
-  color: rgb(0, 0, 0);
+  color: black;
+  text-align: center;
   padding: 14px 16px;
-  text-decoration: none:
+  text-decoration: none;
 }
 li a:hover {
-  background-color: blueviolet;
-  color: black;
+  background: rgb(139, 105, 201);
+  color: azure;
+}
+#pantera {
+  width: 15%;
+}
+.caixapantera {
+  position: absolute;
+  top: 45px;
+  width: 90%;
+  height: 160px;
+  background-color: rgb(255, 255, 255);
+  left: 0;
+  margin: 20px;
+  border-color: black;
+  border-width: 20px;
+  border-style: solid;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+.caixapantera2 {
+  position: absolute;
+  top: 45px;
+  width: 90%;
+  height: 160px;
+  background-color: rgb(0, 0, 0);
+  left: 0;
+  margin: 20px;
+  border-color: black;
+  border-width: 20px;
+  border-style: solid;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
 }
