--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,7 @@
 body {
-  background: rgb(179, 210, 235)255, 235, 192);
+  background: rgb(255, 255, 255);
+  margin: 0%;
+  padding: 0%;
 }
 h1 {
   text-align: center;
@@ -24,7 +26,7 @@ h1 {
    position: absolute;
    width: 100%;
    height: 45px;
-   background:rgb(161, 246, 252);
+   background:rgb(43, 255, 0);
    font-family: 'Courier New', Courier, monospace;
    top: 0;
    left: 0;
@@ -72,7 +74,7 @@ li a:hover {
   top: 45px;
   width: 90%;
   height: 160px;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   left: 0;
   margin: 20px;
   border-color: black;
@@ -81,4 +83,18 @@ li a:hover {
   padding: 20px;
   display: flex;
   justify-content: center;
+}
+.rodape {
+  position: absolute;
+  width: 100%;
+  height: 35px;
+  background-color: black;
+  color: white;
+  bottom: 0%;
+  display: flex;
+  justify-content: center;
+}
+.conteudo {
+  position: absolute;
+  top: 45px;
 }
